y.output
Terminals unused in grammar

    AUTO
    CASE
    DEFAULT
    EXTERN
    INLINE
    REGISTER
    STATIC
    TYPEDEF
    UNION


State 274 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: external_declaration_list

    2 external_declaration_list: external_declaration_list external_declaration
    3                          | external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: declaration_specifiers declarator compound_statement

    7 declaration_specifiers: type_specifier
    8                       | type_specifier declaration_specifiers
    9                       | type_qualifier
   10                       | type_qualifier declaration_specifiers

   11 type_specifier: VOID
   12               | CHAR
   13               | SHORT
   14               | INT
   15               | LONG
   16               | FLOAT
   17               | DOUBLE
   18               | SIGNED
   19               | UNSIGNED
   20               | BOOL
   21               | COMPLEX
   22               | IMAGINARY
   23               | STRUCT IDENTIFIER
   24               | ENUM IDENTIFIER

   25 declarator: direct_declarator
   26           | pointer direct_declarator

   27 direct_declarator: IDENTIFIER
   28                  | LPAREN declarator RPAREN
   29                  | direct_declarator LPAREN parameter_type_list RPAREN
   30                  | direct_declarator LPAREN RPAREN
   31                  | direct_declarator LBRACKET assignment_expression RBRACKET
   32                  | direct_declarator LBRACKET RBRACKET

   33 parameter_type_list: parameter_list
   34                    | parameter_list COMMA ELLIPSIS

   35 parameter_list: parameter_declaration
   36               | parameter_list COMMA parameter_declaration

   37 parameter_declaration: declaration_specifiers declarator
   38                      | declaration_specifiers
   39                      | declaration_specifiers abstract_declarator

   40 abstract_declarator: pointer
   41                    | pointer direct_abstract_declarator
   42                    | direct_abstract_declarator

   43 pointer: STAR type_qualifier_list
   44        | STAR
   45        | STAR type_qualifier_list pointer
   46        | STAR pointer

   47 type_qualifier_list: type_qualifier
   48                    | type_qualifier_list type_qualifier

   49 direct_abstract_declarator: LPAREN abstract_declarator RPAREN
   50                           | LPAREN RPAREN
   51                           | LBRACKET RBRACKET
   52                           | LBRACKET assignment_expression RBRACKET
   53                           | direct_abstract_declarator LPAREN parameter_type_list RPAREN
   54                           | direct_abstract_declarator LPAREN RPAREN
   55                           | direct_abstract_declarator LBRACKET assignment_expression RBRACKET
   56                           | direct_abstract_declarator LBRACKET RBRACKET

   57 declaration: declaration_specifiers init_declarator_list SEMICOLON

   58 init_declarator_list: init_declarator
   59                     | init_declarator_list COMMA init_declarator

   60 init_declarator: declarator
   61                | declarator ASSIGN initializer

   62 initializer: assignment_expression
   63            | LBRACE initializer_list RBRACE
   64            | LBRACE initializer_list COMMA RBRACE

   65 initializer_list: initializer
   66                 | initializer_list COMMA initializer

   67 statement: compound_statement
   68          | expression_statement
   69          | selection_statement
   70          | iteration_statement
   71          | jump_statement

   72 compound_statement: LBRACE block_item_list RBRACE
   73                   | LBRACE RBRACE

   74 block_item_list: block_item_list block_item
   75                | block_item

   76 block_item: declaration
   77           | statement

   78 expression_statement: expression SEMICOLON
   79                     | SEMICOLON

   80 selection_statement: IF LPAREN expression RPAREN statement
   81                    | IF LPAREN expression RPAREN statement ELSE statement
   82                    | SWITCH LPAREN expression RPAREN statement

   83 iteration_statement: WHILE LPAREN expression RPAREN statement
   84                    | DO statement WHILE LPAREN expression RPAREN SEMICOLON
   85                    | FOR LPAREN expression_statement expression_statement RPAREN statement
   86                    | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   87                    | FOR LPAREN declaration expression_statement RPAREN statement
   88                    | FOR LPAREN declaration expression_statement expression RPAREN statement

   89 jump_statement: GOTO IDENTIFIER SEMICOLON
   90               | CONTINUE SEMICOLON
   91               | BREAK SEMICOLON
   92               | RETURN expression SEMICOLON
   93               | RETURN SEMICOLON

   94 expression: assignment_expression
   95           | expression COMMA assignment_expression

   96 assignment_expression: conditional_expression
   97                      | unary_expression assignment_operator assignment_expression

   98 assignment_operator: ASSIGN
   99                    | MUL_ASSIGN
  100                    | DIV_ASSIGN
  101                    | MOD_ASSIGN
  102                    | ADD_ASSIGN
  103                    | SUB_ASSIGN
  104                    | LEFT_ASSIGN
  105                    | RIGHT_ASSIGN
  106                    | AND_ASSIGN
  107                    | XOR_ASSIGN
  108                    | OR_ASSIGN

  109 conditional_expression: logical_or_expression
  110                       | logical_or_expression QUESTION expression COLON conditional_expression

  111 logical_or_expression: logical_and_expression
  112                      | logical_or_expression OR_OP logical_and_expression

  113 logical_and_expression: inclusive_or_expression
  114                       | logical_and_expression AND_OP inclusive_or_expression

  115 inclusive_or_expression: exclusive_or_expression
  116                        | inclusive_or_expression PIPE exclusive_or_expression

  117 exclusive_or_expression: and_expression
  118                        | exclusive_or_expression CARET and_expression

  119 and_expression: equality_expression
  120               | and_expression AMPERSAND equality_expression

  121 equality_expression: relational_expression
  122                    | equality_expression EQ_OP relational_expression
  123                    | equality_expression NE_OP relational_expression

  124 relational_expression: shift_expression
  125                      | relational_expression LT shift_expression
  126                      | relational_expression GT shift_expression
  127                      | relational_expression LE_OP shift_expression
  128                      | relational_expression GE_OP shift_expression

  129 shift_expression: additive_expression
  130                 | shift_expression LEFT_OP additive_expression
  131                 | shift_expression RIGHT_OP additive_expression

  132 additive_expression: multiplicative_expression
  133                    | additive_expression PLUS multiplicative_expression
  134                    | additive_expression MINUS multiplicative_expression

  135 multiplicative_expression: cast_expression
  136                          | multiplicative_expression STAR cast_expression
  137                          | multiplicative_expression SLASH cast_expression
  138                          | multiplicative_expression PERCENT cast_expression

  139 cast_expression: unary_expression
  140                | LPAREN type_name RPAREN cast_expression

  141 unary_expression: postfix_expression
  142                 | INC_OP unary_expression
  143                 | DEC_OP unary_expression
  144                 | unary_operator cast_expression
  145                 | SIZEOF unary_expression
  146                 | SIZEOF LPAREN type_name RPAREN

  147 unary_operator: AMPERSAND
  148               | STAR
  149               | PLUS
  150               | MINUS
  151               | TILDE
  152               | EXCLAMATION

  153 postfix_expression: primary_expression
  154                   | postfix_expression LBRACKET expression RBRACKET
  155                   | postfix_expression LPAREN RPAREN
  156                   | postfix_expression LPAREN argument_expression_list RPAREN
  157                   | postfix_expression DOT IDENTIFIER
  158                   | postfix_expression PTR_OP IDENTIFIER
  159                   | postfix_expression INC_OP
  160                   | postfix_expression DEC_OP

  161 primary_expression: IDENTIFIER
  162                   | INTEGER_CONSTANT
  163                   | FLOATING_CONSTANT
  164                   | CHARACTER_CONSTANT
  165                   | STRING_LITERAL
  166                   | LPAREN expression RPAREN

  167 argument_expression_list: assignment_expression
  168                         | argument_expression_list COMMA assignment_expression

  169 type_name: specifier_qualifier_list
  170          | specifier_qualifier_list abstract_declarator

  171 specifier_qualifier_list: type_specifier specifier_qualifier_list
  172                         | type_specifier
  173                         | type_qualifier specifier_qualifier_list
  174                         | type_qualifier

  175 type_qualifier: CONST
  176               | RESTRICT
  177               | VOLATILE


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    AUTO (258)
    BREAK (259) 91
    CASE (260)
    CHAR (261) 12
    CONST (262) 175
    CONTINUE (263) 90
    DEFAULT (264)
    DO (265) 84
    DOUBLE (266) 17
    ELSE (267) 81
    ENUM (268) 24
    EXTERN (269)
    FLOAT (270) 16
    FOR (271) 85 86 87 88
    GOTO (272) 89
    IF (273) 80 81
    INLINE (274)
    INT (275) 14
    LONG (276) 15
    REGISTER (277)
    RESTRICT (278) 176
    RETURN (279) 92 93
    SHORT (280) 13
    SIGNED (281) 18
    SIZEOF (282) 145 146
    STATIC (283)
    STRUCT (284) 23
    SWITCH (285) 82
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 19
    VOID (289) 11
    VOLATILE (290) 177
    WHILE (291) 83 84
    BOOL (292) 20
    COMPLEX (293) 21
    IMAGINARY (294) 22
    IDENTIFIER <string_val> (295) 23 24 27 89 157 158 161
    INTEGER_CONSTANT <int_val> (296) 162
    FLOATING_CONSTANT <float_val> (297) 163
    CHARACTER_CONSTANT <string_val> (298) 164
    STRING_LITERAL <string_val> (299) 165
    ELLIPSIS (300) 34
    RIGHT_ASSIGN (301) 105
    LEFT_ASSIGN (302) 104
    ADD_ASSIGN (303) 102
    SUB_ASSIGN (304) 103
    MUL_ASSIGN (305) 99
    DIV_ASSIGN (306) 100
    MOD_ASSIGN (307) 101
    AND_ASSIGN (308) 106
    XOR_ASSIGN (309) 107
    OR_ASSIGN (310) 108
    RIGHT_OP (311) 131
    LEFT_OP (312) 130
    INC_OP (313) 142 159
    DEC_OP (314) 143 160
    PTR_OP (315) 158
    AND_OP (316) 114
    OR_OP (317) 112
    LE_OP (318) 127
    GE_OP (319) 128
    EQ_OP (320) 122
    NE_OP (321) 123
    SEMICOLON (322) 57 78 79 84 89 90 91 92 93
    LBRACE (323) 63 64 72 73
    RBRACE (324) 63 64 72 73
    COMMA (325) 34 36 59 64 66 95 168
    COLON (326) 110
    ASSIGN (327) 61 98
    LPAREN (328) 28 29 30 49 50 53 54 80 81 82 83 84 85 86 87 88 140 146 155 156 166
    RPAREN (329) 28 29 30 49 50 53 54 80 81 82 83 84 85 86 87 88 140 146 155 156 166
    LBRACKET (330) 31 32 51 52 55 56 154
    RBRACKET (331) 31 32 51 52 55 56 154
    DOT (332) 157
    AMPERSAND (333) 120 147
    EXCLAMATION (334) 152
    TILDE (335) 151
    MINUS (336) 134 150
    PLUS (337) 133 149
    STAR (338) 43 44 45 46 136 148
    SLASH (339) 137
    PERCENT (340) 138
    LT (341) 125
    GT (342) 126
    CARET (343) 118
    PIPE (344) 116
    QUESTION (345) 110


Nonterminals, with rules where they appear

    $accept (91)
        on left: 0
    program (92)
        on left: 1
        on right: 0
    external_declaration_list (93)
        on left: 2 3
        on right: 1 2
    external_declaration (94)
        on left: 4 5
        on right: 2 3
    function_definition (95)
        on left: 6
        on right: 4
    declaration_specifiers (96)
        on left: 7 8 9 10
        on right: 6 8 10 37 38 39 57
    type_specifier (97)
        on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24
        on right: 7 8 171 172
    declarator (98)
        on left: 25 26
        on right: 6 28 37 60 61
    direct_declarator (99)
        on left: 27 28 29 30 31 32
        on right: 25 26 29 30 31 32
    parameter_type_list (100)
        on left: 33 34
        on right: 29 53
    parameter_list (101)
        on left: 35 36
        on right: 33 34 36
    parameter_declaration (102)
        on left: 37 38 39
        on right: 35 36
    abstract_declarator (103)
        on left: 40 41 42
        on right: 39 49 170
    pointer (104)
        on left: 43 44 45 46
        on right: 26 40 41 45 46
    type_qualifier_list (105)
        on left: 47 48
        on right: 43 45 48
    direct_abstract_declarator (106)
        on left: 49 50 51 52 53 54 55 56
        on right: 41 42 53 54 55 56
    declaration (107)
        on left: 57
        on right: 5 76 87 88
    init_declarator_list (108)
        on left: 58 59
        on right: 57 59
    init_declarator (109)
        on left: 60 61
        on right: 58 59
    initializer (110)
        on left: 62 63 64
        on right: 61 65 66
    initializer_list (111)
        on left: 65 66
        on right: 63 64 66
    statement (112)
        on left: 67 68 69 70 71
        on right: 77 80 81 82 83 84 85 86 87 88
    compound_statement (113)
        on left: 72 73
        on right: 6 67
    block_item_list (114)
        on left: 74 75
        on right: 72 74
    block_item (115)
        on left: 76 77
        on right: 74 75
    expression_statement (116)
        on left: 78 79
        on right: 68 85 86 87 88
    selection_statement (117)
        on left: 80 81 82
        on right: 69
    iteration_statement (118)
        on left: 83 84 85 86 87 88
        on right: 70
    jump_statement (119)
        on left: 89 90 91 92 93
        on right: 71
    expression (120)
        on left: 94 95
        on right: 78 80 81 82 83 84 86 88 92 95 110 154 166
    assignment_expression (121)
        on left: 96 97
        on right: 31 52 55 62 94 95 97 167 168
    assignment_operator (122)
        on left: 98 99 100 101 102 103 104 105 106 107 108
        on right: 97
    conditional_expression (123)
        on left: 109 110
        on right: 96 110
    logical_or_expression (124)
        on left: 111 112
        on right: 109 110 112
    logical_and_expression (125)
        on left: 113 114
        on right: 111 112 114
    inclusive_or_expression (126)
        on left: 115 116
        on right: 113 114 116
    exclusive_or_expression (127)
        on left: 117 118
        on right: 115 116 118
    and_expression (128)
        on left: 119 120
        on right: 117 118 120
    equality_expression (129)
        on left: 121 122 123
        on right: 119 120 122 123
    relational_expression (130)
        on left: 124 125 126 127 128
        on right: 121 122 123 125 126 127 128
    shift_expression (131)
        on left: 129 130 131
        on right: 124 125 126 127 128 130 131
    additive_expression (132)
        on left: 132 133 134
        on right: 129 130 131 133 134
    multiplicative_expression (133)
        on left: 135 136 137 138
        on right: 132 133 134 136 137 138
    cast_expression (134)
        on left: 139 140
        on right: 135 136 137 138 140 144
    unary_expression (135)
        on left: 141 142 143 144 145 146
        on right: 97 139 142 143 145
    unary_operator (136)
        on left: 147 148 149 150 151 152
        on right: 144
    postfix_expression (137)
        on left: 153 154 155 156 157 158 159 160
        on right: 141 154 155 156 157 158 159 160
    primary_expression (138)
        on left: 161 162 163 164 165 166
        on right: 153
    argument_expression_list (139)
        on left: 167 168
        on right: 156 168
    type_name (140)
        on left: 169 170
        on right: 140 146
    specifier_qualifier_list (141)
        on left: 171 172 173 174
        on right: 169 170 171 173
    type_qualifier (142)
        on left: 175 176 177
        on right: 9 10 47 48 173 174


State 0

    0 $accept: • program $end

    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    ENUM       shift, and go to state 4
    FLOAT      shift, and go to state 5
    INT        shift, and go to state 6
    LONG       shift, and go to state 7
    RESTRICT   shift, and go to state 8
    SHORT      shift, and go to state 9
    SIGNED     shift, and go to state 10
    STRUCT     shift, and go to state 11
    UNSIGNED   shift, and go to state 12
    VOID       shift, and go to state 13
    VOLATILE   shift, and go to state 14
    BOOL       shift, and go to state 15
    COMPLEX    shift, and go to state 16
    IMAGINARY  shift, and go to state 17

    program                    go to state 18
    external_declaration_list  go to state 19
    external_declaration       go to state 20
    function_definition        go to state 21
    declaration_specifiers     go to state 22
    type_specifier             go to state 23
    declaration                go to state 24
    type_qualifier             go to state 25


State 1

   12 type_specifier: CHAR •

    $default  reduce using rule 12 (type_specifier)


State 2

  175 type_qualifier: CONST •

    $default  reduce using rule 175 (type_qualifier)


State 3

   17 type_specifier: DOUBLE •

    $default  reduce using rule 17 (type_specifier)


State 4

   24 type_specifier: ENUM • IDENTIFIER

    IDENTIFIER  shift, and go to state 26


State 5

   16 type_specifier: FLOAT •

    $default  reduce using rule 16 (type_specifier)


State 6

   14 type_specifier: INT •

    $default  reduce using rule 14 (type_specifier)


State 7

   15 type_specifier: LONG •

    $default  reduce using rule 15 (type_specifier)


State 8

  176 type_qualifier: RESTRICT •

    $default  reduce using rule 176 (type_qualifier)


State 9

   13 type_specifier: SHORT •

    $default  reduce using rule 13 (type_specifier)


State 10

   18 type_specifier: SIGNED •

    $default  reduce using rule 18 (type_specifier)


State 11

   23 type_specifier: STRUCT • IDENTIFIER

    IDENTIFIER  shift, and go to state 27


State 12

   19 type_specifier: UNSIGNED •

    $default  reduce using rule 19 (type_specifier)


State 13

   11 type_specifier: VOID •

    $default  reduce using rule 11 (type_specifier)


State 14

  177 type_qualifier: VOLATILE •

    $default  reduce using rule 177 (type_qualifier)


State 15

   20 type_specifier: BOOL •

    $default  reduce using rule 20 (type_specifier)


State 16

   21 type_specifier: COMPLEX •

    $default  reduce using rule 21 (type_specifier)


State 17

   22 type_specifier: IMAGINARY •

    $default  reduce using rule 22 (type_specifier)


State 18

    0 $accept: program • $end

    $end  shift, and go to state 28


State 19

    1 program: external_declaration_list •
    2 external_declaration_list: external_declaration_list • external_declaration

    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    ENUM       shift, and go to state 4
    FLOAT      shift, and go to state 5
    INT        shift, and go to state 6
    LONG       shift, and go to state 7
    RESTRICT   shift, and go to state 8
    SHORT      shift, and go to state 9
    SIGNED     shift, and go to state 10
    STRUCT     shift, and go to state 11
    UNSIGNED   shift, and go to state 12
    VOID       shift, and go to state 13
    VOLATILE   shift, and go to state 14
    BOOL       shift, and go to state 15
    COMPLEX    shift, and go to state 16
    IMAGINARY  shift, and go to state 17

    $default  reduce using rule 1 (program)

    external_declaration    go to state 29
    function_definition     go to state 21
    declaration_specifiers  go to state 22
    type_specifier          go to state 23
    declaration             go to state 24
    type_qualifier          go to state 25


State 20

    3 external_declaration_list: external_declaration •

    $default  reduce using rule 3 (external_declaration_list)


State 21

    4 external_declaration: function_definition •

    $default  reduce using rule 4 (external_declaration)


State 22

    6 function_definition: declaration_specifiers • declarator compound_statement
   57 declaration: declaration_specifiers • init_declarator_list SEMICOLON

    IDENTIFIER  shift, and go to state 30
    LPAREN      shift, and go to state 31
    STAR        shift, and go to state 32

    declarator            go to state 33
    direct_declarator     go to state 34
    pointer               go to state 35
    init_declarator_list  go to state 36
    init_declarator       go to state 37


State 23

    7 declaration_specifiers: type_specifier •
    8                       | type_specifier • declaration_specifiers

    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    ENUM       shift, and go to state 4
    FLOAT      shift, and go to state 5
    INT        shift, and go to state 6
    LONG       shift, and go to state 7
    RESTRICT   shift, and go to state 8
    SHORT      shift, and go to state 9
    SIGNED     shift, and go to state 10
    STRUCT     shift, and go to state 11
    UNSIGNED   shift, and go to state 12
    VOID       shift, and go to state 13
    VOLATILE   shift, and go to state 14
    BOOL       shift, and go to state 15
    COMPLEX    shift, and go to state 16
    IMAGINARY  shift, and go to state 17

    $default  reduce using rule 7 (declaration_specifiers)

    declaration_specifiers  go to state 38
    type_specifier          go to state 23
    type_qualifier          go to state 25


State 24

    5 external_declaration: declaration •

    $default  reduce using rule 5 (external_declaration)


State 25

    9 declaration_specifiers: type_qualifier •
   10                       | type_qualifier • declaration_specifiers

    CHAR       shift, and go to state 1
    CONST      shift, and go to state 2
    DOUBLE     shift, and go to state 3
    ENUM       shift, and go to state 4
    FLOAT      shift, and go to state 5
    INT        shift, and go to state 6
    LONG       shift, and go to state 7
    RESTRICT   shift, and go to state 8
    SHORT      shift, and go to state 9
    SIGNED     shift, and go to state 10
    STRUCT     shift, and go to state 11
    UNSIGNED   shift, and go to state 12
    VOID       shift, and go to state 13
    VOLATILE   shift, and go to state 14
    BOOL       shift, and go to state 15
    COMPLEX    shift, and go to state 16
    IMAGINARY  shift, and go to state 17

    $default  reduce using rule 9 (declaration_specifiers)

    declaration_specifiers  go to state 39
    type_specifier          go to state 23
    type_qualifier          go to state 25


State 26

   24 type_specifier: ENUM IDENTIFIER •

    $default  reduce using rule 24 (type_specifier)


State 27

   23 type_specifier: STRUCT IDENTIFIER •

    $default  reduce using rule 23 (type_specifier)


State 28

    0 $accept: program $end •

    $default  accept


State 29

    2 external_declaration_list: external_declaration_list external_declaration •

    $default  reduce using rule 2 (external_declaration_list)


State 30

   27 direct_declarator: IDENTIFIER •

    $default  reduce using rule 27 (direct_declarator)


State 31

   28 direct_declarator: LPAREN • declarator RPAREN

    IDENTIFIER  shift, and go to state 30
    LPAREN      shift, and go to state 31
    STAR        shift, and go to state 32

    declarator         go to state 40
    direct_declarator  go to state 34
    pointer            go to state 35


State 32

   43 pointer: STAR • type_qualifier_list
   44        | STAR •
   45        | STAR • type_qualifier_list pointer
   46        | STAR • pointer

    CONST     shift, and go to state 2
    RESTRICT  shift, and go to state 8
    VOLATILE  shift, and go to state 14
    STAR      shift, and go to state 32

    $default  reduce using rule 44 (pointer)

    pointer              go to state 41
    type_qualifier_list  go to state 42
    type_qualifier       go to state 43


State 33

    6 function_definition: declaration_specifiers declarator • compound_statement
   60 init_declarator: declarator •
   61                | declarator • ASSIGN initializer

    LBRACE  shift, and go to state 44
    ASSIGN  shift, and go to state 45

    $default  reduce using rule 60 (init_declarator)

    compound_statement  go to state 46


State 34

   25 declarator: direct_declarator •
   29 direct_declarator: direct_declarator • LPAREN parameter_type_list RPAREN
   30                  | direct_declarator • LPAREN RPAREN
   31                  | direct_declarator • LBRACKET assignment_expression RBRACKET
   32                  | direct_declarator • LBRACKET RBRACKET

    LPAREN    shift, and go to state 47
    LBRACKET  shift, and go to state 48

    $default  reduce using rule 25 (declarator)


State 35

   26 declarator: pointer • direct_declarator

    IDENTIFIER  shift, and go to state 30
    LPAREN      shift, and go to state 31

    direct_declarator  go to state 49


State 36

   57 declaration: declaration_specifiers init_declarator_list • SEMICOLON
   59 init_declarator_list: init_declarator_list • COMMA init_declarator

    SEMICOLON  shift, and go to state 50
    COMMA      shift, and go to state 51


State 37

   58 init_declarator_list: init_declarator •

    $default  reduce using rule 58 (init_declarator_list)


State 38

    8 declaration_specifiers: type_specifier declaration_specifiers •

    $default  reduce using rule 8 (declaration_specifiers)


State 39

   10 declaration_specifiers: type_qualifier declaration_specifiers •

    $default  reduce using rule 10 (declaration_specifiers)


State 40

   28 direct_declarator: LPAREN declarator • RPAREN

    RPAREN  shift, and go to state 52


State 41

   46 pointer: STAR pointer •

    $default  reduce using rule 46 (pointer)


State 42

   43 pointer: STAR type_qualifier_list •
   45        | STAR type_qualifier_list • pointer
   48 type_qualifier_list: type_qualifier_list • type_qualifier

    CONST     shift, and go to state 2
    RESTRICT  shift, and go to state 8
    VOLATILE  shift, and go to state 14
    STAR      shift, and go to state 32

    $default  reduce using rule 43 (pointer)

    pointer         go to state 53
    type_qualifier  go to state 54


State 43

   47 type_qualifier_list: type_qualifier •

    $default  reduce using rule 47 (type_qualifier_list)


State 44

   72 compound_statement: LBRACE • block_item_list RBRACE
   73                   | LBRACE • RBRACE
